--- a/.github/workflows/artifact.yml
+++ b/.github/workflows/artifact.yml
@@ -32,3 +32,6 @@ jobs:
       with:
         name: hello-artifact
         path: ./artifacts/hello.txt
+
+    - name: Display content of the text file
+      run: cat ./artifacts/hello.txt
